2011-06-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Implemented CFStringReplace().
	* Tests/CFString/mutablestring.m: Added more tests.

2011-06-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Use CFStringInlineBuffer where appropriate.
	Also added CFStringTimeWhitespace().
	* Source/CFStringEncoding.c: Fixed bug a uncovered by tests.
	* Tests/CFString/create.m:
	* Tests/CFString/mutablestring.m: Added a few more tests.

2011-06-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c:
	* Source/CFStringEncoding.c: Fixed bugs uncovered by tests.
	* Tests/CFString/mutablestring.m: Added CFMutableString tests.

2011-06-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Implemented a few more functions.
	* Headers/CoreFoundation/ForFoundationOnly.h: Added 2 more functions
	to be used internally by CoreFoundation and Foundation.

2011-05-31 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/internal.h: Define mutex functions to be used internally.
	* Source/CFLocale.c:
	* Source/CFRuntime.m: Use a mutex instead of spinlock.

2011-05-30 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Added CFStringNormalize and CFStringTransform.
	* Source/NSCFString.m: Return CFString's type ID.

2011-05-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFString.m: Add NSCFString class.

2011-05-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Added case mapping functions to CFMutableString.

2011-05-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFString.c:
	* Source/CFStringUtilities.c: Moved some CFString functions to a different
	file to reduce clutter and implemented them.

2011-05-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* GNUmakefile:
	* Source/CFUUID.c:
	* Source/CFRuntime.m:
	* Headers/CoreFoundation/CFUUID.h: Added CFUUID.
	* Tests/CFUUID: And some tests.

2011-05-20 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFType.m: